# COPASI

./: .clang-format  .gitattributes  .gitignore  .project  .sonarcloud.properties  .travis.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  COPASI.doxyfile  COPASI_License_COM.txt  COPASI_License_DE.txt  COPASI_License_US.txt  CTestConfig.cmake  ChooseQtVersion.cmake  DataModel.txt  FunctionDB.gps  FunctionDB.xml  MakeMacImage.sh  Makefile.am  Makefile.dist  Makefile.in  README.Linux  README.SunOS  README.Win32  README.md  README_MAC.rtf  Sample.txt  TransientDependencies.dot  acinclude.m4  acinclude.m4.in  aclocal.m4  build.h  cmake-set-dependencies.cmake  conanfile.txt  config.h.in  configure  configure.bat  configure.in  copasi.doxygen  (+14 more)
admin/: Makefile.am  acinclude.m4.in  am_edit  clo++.sh  configure.bat  configure.in  copasi.aip  cvs.sh  flex.sh  include.sh  libs.sh  libtool.m4.in  missing  mkDarwin.sh  mkLinux.sh  mkWIN32.sh  mkbuild.sh  mkinstalldirs  mksrc.sh  mml2png.php  updatehtml.sh  yacc.sh
admin/documentation/: .cvsignore  CodeGuidelines.tex  CodeGuidelines.xml  CodeGuidelines_main.xml  FisherInformation.tex  KineticLaw.tex  Makefile  StabilityAnalysis.tex
catch-unit-tests/: CMakeLists.txt  catch.hpp  main.cpp  test-get_object_from_cn.cpp  test_CDataHandler.cpp  test_get_object_from_name.cpp  test_sbml_import.cpp
catch-unit-tests/test-data/: simple_v3_event.cps  unit_test.xml  volume_units.xml
copasi/: .cvsignore  1_configure.dsp  1_configure.msvc2008.vcproj  1_configure.vcproj  ABiochem.dsw  ArtisticLicense.txt  CHANGES  CMakeConsoleApp.cmake  CMakeLists.txt  CMakeUIApp.cmake  CMakeUILib.cmake  Copasi.kdevelop  Copasi.kdevelop.filelist  CopasiModelTypes.h  CopasiTaskTypes.h  CopasiTypes.h  CopasiVersion.h.in  FlexLexer.h  LicenseCOM.txt.h  LicenseDE.txt.h  LicenseUS.txt.h  Makefile.am  Makefile.in  app.pri  blas.h  blaswrap.h  build.sh  clapackwrap.h  common.cmake  common.pri  config.h.in  convert_ui.bat  copasi.dsp  copasi.dsw  copasi.h  copasi.kdevprj  copasi.msvc2008.sln  copasi.pro  copasi.sln  copasilicense.h  (+7 more)
copasi/ABiochem/: 1d.cpp  1d.dsp  ABiochem.dsp  ABiochem.dsw  ABiochem.h  CGene.cpp  CGene.h  Erdos.cpp  Erdos.dsp  Makefile.am  Makefile.in  R250.H  ab.cpp  ab.dsp  abiochem.cpp  abiochem.xml  agnindex.pl  alf-experiment.pl  clo.cpp  clo.h  erdos.h  experiments.pl  gepasiall.pl  layout.pl  layoutall.pl  nets.css  nullmutants.pl  r250.c  r250.h  random.c  ssstats.pl  wattsrog.dsp  wattstrog.cpp
copasi/CopasiDataModel/: .cvsignore  CCopasiDataModel.cpp  CCopasiDataModel.h  CDataModel.cpp  CDataModel.h  CInfo.cpp  CInfo.h  CMakeLists.txt  CopasiDataModel.dsp  CopasiDataModel.pro  CopasiDataModel.vcproj
copasi/CopasiSBW/: CMakeLists.txt  SBWTranslator.cpp  SBWTranslator.h
copasi/CopasiSE/: .cvsignore  .gitignore  CMakeLists.txt  CopasiSE.cpp  CopasiSE.dsp  CopasiSE.pro  CopasiSE.vcproj  Info.plist
copasi/CopasiUI/: .cvsignore  .gitignore  AboutDialog.cpp  AboutDialog.h  CCopasiPlotSelectionDialog.cpp  CCopasiPlotSelectionDialog.h  CCopasiSelectionDialog.cpp  CCopasiSelectionDialog.h  CCopasiSelectionWidget.cpp  CCopasiSelectionWidget.h  CCopasiSimpleSelectionTree.cpp  CCopasiSimpleSelectionTree.h  CMCAResultSubwidget.cpp  CMCAResultSubwidget.h  CMCAResultSubwidget.ui  CMCAResultSubwidget.ui.h  CMCAResultWidget.cpp  CMCAResultWidget.h  CMCAWidget.cpp  CMCAWidget.h  CMakeLists.txt  CPlotSelectionDialog.cpp  CPlotSelectionDialog.h  CProgressBar.cpp  CProgressBar.h  CQEFMWidget.cpp  CQEFMWidget.h  CQEFMWidget.ui.h  CQExperimentData.cpp  CQExperimentData.h  CQExperimentData.ui  CQExperimentData.ui.h  CQExperimentSelection.cpp  CQExperimentSelection.h  CQExperimentSelection.ui.h  CQExpressionWidget.cpp  CQExpressionWidget.h  CQFileDialogBtnGrp.cpp  CQFileDialogBtnGrp.h  CQFileDialogBtnGrp.ui  (+312 more)
copasi/CopasiUI3/: CopasiUI3.dep  CopasiUI3.dsp  MetabolitesWidget.cpp  MetabolitesWidget.h  MyCheckListItem.cpp  MyCheckListItem.h  MyTable.cpp  MyTable.h  MyTreeAndListWidget.cpp  MyTreeAndListWidget.h  Reactions.h  ReactionsWidget.cpp  ReactionsWidget.h  copasiui3window.cpp  copasiui3window.h  main.cpp
copasi/GL/: glext.h
copasi/MIRIAM/: CAuthor.cpp  CAuthor.h  CBiologicalDescription.cpp  CBiologicalDescription.h  CConstants.cpp  CConstants.h  CCreator.cpp  CCreator.h  CMIRIAMResource.cpp  CMIRIAMResource.h  CMakeLists.txt  CModelMIRIAMInfo.cpp  CModelMIRIAMInfo.h  CModified.cpp  CModified.h  CPublication.cpp  CPublication.h  CRDFEdge.cpp  CRDFEdge.h  CRDFGraph.cpp  CRDFGraph.h  CRDFGraphConverter.cpp  CRDFGraphConverter.h  CRDFLiteral.cpp  CRDFLiteral.h  CRDFNode.cpp  CRDFNode.h  CRDFObject.cpp  CRDFObject.h  CRDFParser.cpp  CRDFParser.h  CRDFPredicate.cpp  CRDFPredicate.h  CRDFSubject.cpp  CRDFSubject.h  CRDFTriplet.cpp  CRDFTriplet.h  CRDFUtilities.cpp  CRDFUtilities.h  CRDFWriter.cpp  (+10 more)
copasi/MIRIAMUI/: .cvsignore  CAuthorsWidget.cpp  CAuthorsWidget.h  CBiologicalDescriptionsWidget.cpp  CBiologicalDescriptionsWidget.h  CCreatorsWidget.cpp  CCreatorsWidget.h  CMIRIAMModelWidget.cpp  CMIRIAMModelWidget.h  CMakeLists.txt  CModifiedWidget.cpp  CModifiedWidget.h  CPublicationsWidget.cpp  CPublicationsWidget.h  CQBaseDataModel.cpp  CQBaseDataModel.h  CQBiologicalDescriptionDM.cpp  CQBiologicalDescriptionDM.h  CQComboDelegate.cpp  CQComboDelegate.h  CQCreatorDM.cpp  CQCreatorDM.h  CQMiriamWidget.cpp  (+25 more)
sbml-testsuite/: .cvsignore  CMakeLists.txt  Info.plist  README.md  run_suite.cmake  sbml-testsuite.pro  wrapper.cpp
semantic-test-suite/: .cvsignore  CMakeLists.txt  Info.plist  addTestSuiteInfo.py  copasi_export_test.sh  copasi_wrapper.cpp  copasi_wrapper.sh  copasitestlist.txt  semantic-test-suite.pro  semanticTestSuite.dsp  semanticTestSuite.vcproj
steady_state_test_wrapper/: CMakeLists.txt  copasi_wrapper.cpp  steady_state_test_wrapper.pro
tests/: CMakeLists.txt  ModelLoading.cpp  TestRunner.cpp  catch.hpp  test-get_object_from_cn.cpp  test_CDataHandler.cpp  test_delete_species.cpp  test_get_object_from_name.cpp  test_model_creation.cpp  test_sbml_import.cpp  test_sedml.cpp
tnt/: Makefile.am  Makefile.in  cmat.h  fmat.h  luX.h  triang.h  vec.h
(+4449 files in other folders)
